[#noissue] Refactor DataPoint